# platform.core.system.tlm

./: .gitignore  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  common.mk  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  tlm-login  tlm-login.debian  tlm.conf.in  tlm.service
data/common/etc/session.d/: user-session
data/multi-seat/etc/: tlm.conf
data/multi-seat/etc/session.d/: app-session  tizen-session  user-session
data/tizen-common/: weston-user.ini
data/tizen-common/etc/: tlm-default.conf  tlm.conf
data/tizen-common/etc/session.d/: display-session  user-session
data/tizen-ivi/: 10-multiseat-vtc1010.rules  weston-genivi-vtc1010.ini  weston-genivi.ini  weston-user.ini
data/tizen-ivi/etc/: tlm-multiseat.conf  tlm-singleseat-ico.conf  tlm-singleseat-modello.conf  tlm-singleseat.conf  tlm-vtc1010.conf
data/tizen-ivi/etc/profile.d/: weston-env-ivi.sh
data/tizen-ivi/etc/session.d/: genivi-session  genivi-session-modello  genivi-session-multiseat  genivi-session-singleseat  genivi-session-vtc1010  user-session  user-session-ico  user-session-ico-launch-script  user-session-ico-weston  user-session-launch-script  user-session-modello  user-session-modello-launch-script  user-session-modello-weston  user-session-weston  user-session.ivi
data/tizen-ivi/etc/xdg/weston/: weston-genivi-modello.ini  weston-genivi-vtc1010.ini  weston-genivi.ini  weston-user-modello.ini  weston-user.ini
dists/debian/: README.Debian  changelog  control  copyright  install  postinst  postrm  preinst  prerm  rules  tlm-dev.install  tlm-doc.install
dists/rpm/: tlm-suse.spec
dists/rpm/tizen/packaging/: tlm-tizen.changes  tlm-tizen.spec  tlm.changes  tlm.spec
docs/: Makefile.am  Makefile.in  introduction.xml  tlm-dbus-login-doc-gen-org.tizen.Tlm.Login.xml  tlm-dbus-session-doc-gen-org.tizen.Tlm.Session.xml  tlm-docs.sgml  tlm-sections.txt  tlm.types
docs/html/: TlmAccountPlugin.html  TlmAccountPluginDefault.html  TlmAccountPluginGumd.html  TlmAuthPlugin.html  TlmAuthPluginDefault.html  TlmConfig.html  api-index-full.html  ch01.html  ch02.html  ch03.html  ch05.html  deprecated-api-index.html  gdbus-org.O1.Tlm.Login.html  gdbus-org.tizen.Tlm.Login.html  index.html  index.sgml  object-tree.html  tlm-Errors.html  tlm-General-configuration.html  tlm-Seat-configuration.html  tlm-TlmAccountPlugin.html  tlm-TlmAccountPluginDefault.html  tlm-TlmAuthPlugin.html  tlm-TlmAuthPluginDefault.html  tlm-intro.html  tlm-tlm-log.html  tlm.devhelp2
examples/: Makefile.am  Makefile.in  tlm-ui.c
packaging/: tlm.changes  tlm.conf  tlm.spec
src/: Makefile.am  Makefile.in
src/common/: Makefile.am  Makefile.in  tlm-account-plugin.c  tlm-account-plugin.h  tlm-auth-plugin.c  tlm-auth-plugin.h  tlm-config-general.h  tlm-config-seat.h  tlm-config.c  tlm-config.h  tlm-error.c  tlm-error.h  tlm-log.c  tlm-log.h  tlm-pipe-stream.c  tlm-pipe-stream.h  tlm-utils.c  tlm-utils.h
src/common/dbus/: Makefile.am  Makefile.in  tlm-dbus-login-doc-gen-org.O1.Tlm.Login.xml  tlm-dbus-login-doc-gen-org.tizen.Tlm.Login.xml  tlm-dbus-login-gen.c  tlm-dbus-login-gen.h  tlm-dbus-session-doc-gen-org.O1.Tlm.Session.xml  tlm-dbus-utils.c  tlm-dbus-utils.h  tlm-dbus.h
src/common/dbus/interfaces/: org.O1.Tlm.Login.xml  org.O1.Tlm.Session.xml  org.tizen.Tlm.Login.xml  org.tizen.Tlm.Session.xml
src/daemon/: Makefile.am  Makefile.in  tlm-auth-session.c  tlm-auth-session.h  tlm-cynara-privilege-checker.c  tlm-cynara-privilege-checker.h  tlm-dbus-observer.c  tlm-dbus-observer.h  tlm-main.c  tlm-manager.c  tlm-manager.h  tlm-seat.c  tlm-seat.h  tlm-session-remote.c  tlm-session-remote.h  tlm-session.c  tlm-session.h  tlm-types.h  tlm-utils.c  tlm-utils.h  tlm.pc.in
src/daemon/dbus/: Makefile.am  Makefile.in  tlm-dbus-login-adapter.c  tlm-dbus-login-adapter.h  tlm-dbus-server-interface.c  tlm-dbus-server-interface.h  tlm-dbus-server-p2p.c  tlm-dbus-server-p2p.h  tlm-dbus-utils.c
src/plugins/: Makefile.am  Makefile.in
src/plugins/default/: Makefile.am  Makefile.in  tlm-account-plugin-default.c  tlm-account-plugin-default.h  tlm-auth-plugin-default.c  tlm-auth-plugin-default.h
src/plugins/gumd/: Makefile.am  Makefile.in  tlm-plugin-gumd.c  tlm-plugin-gumd.h
src/plugins/nfc/: Makefile.am  Makefile.in  tlm-auth-plugin-nfc.c  tlm-auth-plugin-nfc.h
src/sessiond/: Makefile.am  Makefile.in  main.c  tlm-auth-session.c  tlm-auth-session.h  tlm-session-daemon.c  tlm-session-daemon.h  tlm-session.c  tlm-session.h
src/utils/: Makefile.am  Makefile.in  tlm-client.c  tlm-launcher.c  tlm-weston-launch.c
tests/: Makefile.am  Makefile.in  test_common.mk  tlm-test.conf.in
tests/config/: Makefile.am  Makefile.in  config.c  test.conf
tests/daemon/: Makefile.am  Makefile.in  daemon-test.c
tools/: prepare-tizen.sh
